fixed issues with buttons on mobile

--- a/src/features/quote/Quote.module.css
+++ b/src/features/quote/Quote.module.css
@@ -106,7 +106,7 @@
     width: 35vw;
   }
   .NewQuote:hover, .TweetQuote:hover {
-    width: 40vw;
+    width: 37vw;
   }
 
   .Text, .NewQuote, .TweetQuote {
